--- a/settings.conf
+++ b/settings.conf
@@ -130,9 +130,9 @@ sequence:
   - partition
 #  - zfs
   - mount
-  - fstab
   - unpackfs
   - machineid
+  - fstab
   - locale
   - keyboard
   - localecfg
@@ -148,10 +148,13 @@ sequence:
   - networkcfg
   - hwclock
   - services-systemd
+  - packages
 #  - dracut
 #  - initramfs
 #  - grubcfg
   - bootloader
+  - plymouthcfg
+  - preservefile
   - umount
 - show:
   - finished
