--- a/modules/bootloader.conf
+++ b/modules/bootloader.conf
@@ -83,4 +83,4 @@ efiBootMgr: "efibootmgr"
 installEFIFallback: true
 
 # Optionally install both BIOS and UEFI GRUB bootloaders.
-installHybridGRUB: false
+installHybridGRUB: true
