--- a/modules/services-systemd.conf
+++ b/modules/services-systemd.conf
@@ -52,7 +52,7 @@
 
 # By default, no changes are made.
 units: 
-    - name: "lightdm.service"
+    - name: "lightdm"
       action: "enable"
     - name: "NetworkManager.service"
       action: "enable"
