--- a/settings.conf
+++ b/settings.conf
@@ -130,14 +130,14 @@ sequence:
   - partition
 #  - zfs
   - mount
-  - fstab
   - unpackfs
   - machineid
+  - fstab
   - locale
   - keyboard
   - localecfg
-  - luksbootkeyfile
-  - luksopenswaphookcfg
+#  - luksbootkeyfile
+#  - luksopenswaphookcfg
 #  - dracutlukscfg
 #  - zfshostid
   - initcpiocfg
