--- a/settings.conf
+++ b/settings.conf
@@ -149,8 +149,8 @@ sequence:
   - services-systemd
 #  - dracut
 #  - initramfs
-#  - grubcfg
-  - plymouthcfg
+  - grubcfg
+#  - plymouthcfg
   - bootloader
   - umount
 - show:
