--- a/modules/grubcfg.conf
+++ b/modules/grubcfg.conf
@@ -46,6 +46,7 @@ defaults:
     GRUB_DISABLE_SUBMENU: true
     GRUB_TERMINAL_OUTPUT: "console"
     GRUB_DISABLE_RECOVERY: true
+    GRUB_CMDLINE_LINUX_DEFAULT: "quiet rw splash"
 
 # Set to true to force defaults to be used even when not overwriting
 always_use_defaults: false
