--- a/modules/bootloader.conf
+++ b/modules/bootloader.conf
@@ -23,6 +23,10 @@ efiBootLoader: "grub"
 kernelSearchPath: "/usr/lib/modules"
 kernelPattern: "^vmlinuz.*"
 
+img: "/initramfs-linux.img"
+fallback: "/initramfs-linux-fallback.img"
+timeout: "10"
+
 # loaderEntries is an array of options to add to loader.conf for systemd-boot
 # please note that the "default" option is added programmatically
 loaderEntries:
