--- a/modules/shellprocess.conf
+++ b/modules/shellprocess.conf
@@ -125,13 +125,13 @@ verbose: false
 # - there is nothing special about the invocation of true
 # - the slowloris command has a different timeout from the other commands
 # - the echo command logs its output line-by-line
+
 script:
-    - "-touch ${ROOT}/tmp/thingy"
-    - "/usr/bin/true"
-    - command: "/usr/local/bin/slowloris"
-      timeout: 3600
-    - command: "echo -e '\e[33;2mred\e[33;0m' ; echo second line"
-      verbose: true
+    - "-rm -f @@ROOT@@/etc/mkinitcpio.d/linux.preset"
+    - "-mv @@ROOT@@/usr/share/calamares/extras/itec.preset @@ROOT@@/etc/mkinitcpio.d/linux.preset"
+    - "-rm -f @@ROOT@@/etc/mkinitcpio.conf"
+    - "-mv @@ROOT@@/usr/share/calamares/extras/itecmkinitcpio.conf @@ROOT@@/etc/mkinitcpio.conf"
+    - "-rm -f @@ROOT@@/etc/mkinitcpio.conf.d/archiso.conf"
 
 # You can change the description of the job (as it is displayed in the
 # progress bar during installation) by defining an *i18n* key, which
