--- a/settings.conf
+++ b/settings.conf
@@ -140,6 +140,7 @@ sequence:
 #  - luksopenswaphookcfg
 #  - dracutlukscfg
 #  - zfshostid
+  - shellprocess
   - initcpiocfg
   - initcpio
   - users
