--- a/modules/shellprocess.conf
+++ b/modules/shellprocess.conf
@@ -127,11 +127,20 @@ verbose: false
 # - the echo command logs its output line-by-line
 
 script:
-    - "-rm -f @@ROOT@@/etc/mkinitcpio.d/linux.preset"
-    - "-mv @@ROOT@@/usr/share/calamares/extras/itec.preset @@ROOT@@/etc/mkinitcpio.d/linux.preset"
-    - "-rm -f @@ROOT@@/etc/mkinitcpio.conf"
-    - "-mv @@ROOT@@/usr/share/calamares/extras/itecmkinitcpio.conf @@ROOT@@/etc/mkinitcpio.conf"
-    - "-rm -f @@ROOT@@/etc/mkinitcpio.conf.d/archiso.conf"
+  - command: "rm -f @@ROOT@@/etc/mkinitcpio.d/linux.preset"
+    verbose: true
+
+  - command: "cp @@ROOT@@/usr/share/calamares/extras/itec.preset @@ROOT@@/etc/mkinitcpio.d/linux.preset"
+    verbose: true
+
+  - command: "rm -f @@ROOT@@/etc/mkinitcpio.conf"
+    verbose: true
+
+  - command: "cp @@ROOT@@/usr/share/calamares/extras/itecmkinitcpio.conf @@ROOT@@/etc/mkinitcpio.conf"
+    verbose: true
+
+  - command: "rm -f @@ROOT@@/etc/mkinitcpio.conf.d/archiso.conf"
+    verbose: true
 
 # You can change the description of the job (as it is displayed in the
 # progress bar during installation) by defining an *i18n* key, which
