--- a/modules/shellprocess.conf
+++ b/modules/shellprocess.conf
@@ -127,20 +127,11 @@ verbose: false
 # - the echo command logs its output line-by-line
 
 script:
-  - command: "rm -f @@ROOT@@/etc/mkinitcpio.d/linux.preset"
-    verbose: true
-
-  - command: "cp @@ROOT@@/etc/calamares/extras/itec.preset @@ROOT@@/etc/mkinitcpio.d/linux.preset"
-    verbose: true
-
-  - command: "rm -f @@ROOT@@/etc/mkinitcpio.conf"
-    verbose: true
-
-  - command: "cp @@ROOT@@/etc/calamares/extras/itecmkinitcpio.conf @@ROOT@@/etc/mkinitcpio.conf"
-    verbose: true
-
-  - command: "rm -f @@ROOT@@/etc/mkinitcpio.conf.d/archiso.conf"
-    verbose: true
+  - "rm -f @@ROOT@@/etc/mkinitcpio.d/linux.preset"
+  - "cp @@ROOT@@/etc/calamares/itec.preset @@ROOT@@/etc/mkinitcpio.d/linux.preset"
+  - "rm -f @@ROOT@@/etc/mkinitcpio.conf"
+  - "cp @@ROOT@@/etc/calamares/itecmkinitcpio.conf @@ROOT@@/etc/mkinitcpio.conf"
+  - "rm -f @@ROOT@@/etc/mkinitcpio.conf.d/archiso.conf"
 
 # You can change the description of the job (as it is displayed in the
 # progress bar during installation) by defining an *i18n* key, which
