--- a/modules/packages.conf
+++ b/modules/packages.conf
@@ -208,5 +208,9 @@ operations:
     - vi-${LOCALE}
     - wget
     - binutils
+    - git
+    - neovim
+    - xorg
+    - btop
   - remove:
     - calamares
