--- a/modules/shellprocess.conf
+++ b/modules/shellprocess.conf
@@ -127,11 +127,11 @@ verbose: false
 # - the echo command logs its output line-by-line
 
 script:
-  - "rm -f @@ROOT@@/etc/mkinitcpio.d/linux.preset"
-  - "cp @@ROOT@@/etc/calamares/itec.preset @@ROOT@@/etc/mkinitcpio.d/linux.preset"
-  - "rm -f @@ROOT@@/etc/mkinitcpio.conf"
-  - "cp @@ROOT@@/etc/calamares/itecmkinitcpio.conf @@ROOT@@/etc/mkinitcpio.conf"
-  - "rm -f @@ROOT@@/etc/mkinitcpio.conf.d/archiso.conf"
+  - "rm -f /etc/mkinitcpio.d/linux.preset"
+  - "cp /etc/calamares/itec.preset /etc/mkinitcpio.d/linux.preset"
+  - "rm -f /etc/mkinitcpio.conf"
+  - "cp /etc/calamares/itecmkinitcpio.conf /etc/mkinitcpio.conf"
+  - "rm -f /etc/mkinitcpio.conf.d/archiso.conf"
 
 # You can change the description of the job (as it is displayed in the
 # progress bar during installation) by defining an *i18n* key, which
