--- a/modules/shellprocess.conf
+++ b/modules/shellprocess.conf
@@ -128,9 +128,9 @@ verbose: false
 
 script:
   - "rm -f /etc/mkinitcpio.d/linux.preset"
-  - "cp /etc/calamares/itec.preset /etc/mkinitcpio.d/linux.preset"
+  - "cp /usr/share/calamares/itec.preset /etc/mkinitcpio.d/linux.preset"
   - "rm -f /etc/mkinitcpio.conf"
-  - "cp /etc/calamares/itecmkinitcpio.conf /etc/mkinitcpio.conf"
+  - "cp /usr/share/calamares/itecmkinitcpio.conf /etc/mkinitcpio.conf"
   - "rm -f /etc/mkinitcpio.conf.d/archiso.conf"
 
 # You can change the description of the job (as it is displayed in the
